# wasmcloud-tutorial

./: .prettierignore  LICENSE  README.md  devbox.json
.github/workflows/: booking-master-component.yaml  echo-component.yaml  prettier.yaml
assets/: hello-world-ingress.yaml
component-model/: README.md  devbox.json
component-model/py-component/: README.md  app.py  pyproject.toml
component-model/py-component/wit/: component.wit
component-model/rs-component/: .gitignore  Cargo.toml  README.md
component-model/rs-component/src/: main.rs
component-model/rs-component/wit/: component.wit
custom-provider/: README.md  devbox.json
custom-provider/custom-component/: Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
custom-provider/custom-component/src/: bindings.rs  lib.rs
custom-provider/custom-component/wit/: component.wit
custom-provider/key-value-provider/: Cargo.toml  README.md  wadm.yaml  wasmcloud.toml
custom-provider/key-value-provider/src/: bindings.rs  main.rs  provider.rs
custom-provider/key-value-provider/wit/: world.wit
kubernetes/: README.md  devbox.json
kubernetes/assets/: ingress.yaml  k3d-config.yaml  platform-values.yaml  redis-values.yaml  wasmcloud-hostconfig.yaml  wasmcloud-router-app.yaml
kubernetes/components/: README.md  k8s.wadm.yaml  local.wadm.yaml
kubernetes/components/booking-master/: Cargo.toml  README.md  devbox.json  wasmcloud.toml
kubernetes/components/echo/: Cargo.toml  README.md  devbox.json  wadm.yaml  wasmcloud.toml
kubernetes/components/echo/src/: lib.rs
kubernetes/components/echo/wit/: world.wit
nats/: README.md  devbox.json
nats/rs-example/: Cargo.toml
nats/rs-example/src/: main.rs
potterverse/wit/: world.wit
provider/: LICENSE  README.md  devbox.json
provider/inventory-component/: Cargo.toml  README.md  local.wadm.yaml  wadm.yaml
provider/inventory-component/src/: lib.rs
provider/potterverse/: .gitignore
(+4 files in other folders)
