[package]
name = "calculator"
version = "0.1.0"
edition = "2024"

[package.metadata.component]
package = "wasmcloud-tutorial:calculator"

[package.metadata.component.dependencies]

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"wasmcloud-tutorial:adder" = { path = "../py-component/wit" }
