[package]
name = "echo"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.132", default-features = false, features = [ "std" ] }
anyhow = "1.0.100"
wit-bindgen = "0.46"
wasmcloud-component = "0.2.0"
